# zfs-forensic

./: .gitignore  .gitleaks.toml  Cargo.toml  README.md  clippy.toml  deny.toml  mkdocs.yml  release-plz.toml  renovate.json
.github/workflows/: ci.yml  docs.yml  fuzz.yml  release-plz.yml
core/: Cargo.toml
core/src/: blkptr.rs  bytes.rs  checksum.rs  compress.rs  dmu.rs  dnode.rs  dsl.rs  error.rs  label.rs  lib.rs  nvlist.rs  objset.rs  read.rs  sa.rs  uberblock.rs  zap.rs  zpl.rs
core/tests/: blkptr_io.rs  label.rs  sa.rs  tier1_freebsd.rs  tier1_zol061.rs  uberblock.rs  zap.rs  zpl_synth.rs
docs/: PRD.md  RESEARCH.md  index.md  privacy.md  terms.md  validation.md
docs/decisions/: 0001-pure-rust-clean-room-reader.md  0002-core-forensic-two-crate-split.md  0003-crate-naming-zfs-forensic-core.md  0004-forbid-unsafe-both-crates.md  0005-endian-adaptive-reader.md  0006-on-disk-format-grounding.md  0007-batteries-included-codecs-msrv-1-87.md  0008-forensic-findings-cow-carving-single-vdev-scope.md
forensic/: Cargo.toml
forensic/src/: lib.rs
forensic/tests/: carve.rs  carve_synth.rs  integrity.rs  sweep_synth.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: blkptr.rs  dnode.rs  dsl.rs  fuzz_forensic.rs  label.rs  read_block.rs  sa.rs  uberblock.rs  zap.rs
supply-chain/: config.toml
tests/data/: README.md  zstd_frame.plain.txt  zstd_frame.zst
