[package]
name = "zfs-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Pure-Rust from-scratch ZFS on-disk reader — vdev label, XDR nvlist config, and endian-adaptive uberblock array, over any byte source"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/zfs-core"
readme.workspace = true
authors.workspace = true
keywords = ["forensics", "zfs", "filesystem", "dfir", "parser"]
categories.workspace = true
# Integration tests read the repo-root tests/data L0 label fixture via
# include_bytes!/env-gated paths, outside this package. Excluding /tests keeps
# the published tarball self-contained; the explicit *.img/*.bin globs are
# belt-and-suspenders so a large minted oracle image can never leak into the
# published `.crate` and breach the ~10 MiB crates.io limit.
exclude = [
    "/fuzz",
    "/.github",
    "/docs",
    "/tests",
    "/tests/data/*.img",
    "/tests/data/*.bin",
]

# The bare `zfs` crate name (ticki/zfs, 2016, abandoned) AND `zfs-core`
# (libzfs_core FFI, 2019) are both taken on crates.io, so we do NOT claim a
# `[lib] name = "zfs"`; the import path is `zfs_core`. See tests/data/README.md
# and the repo README for the publish-time name decision.

[dependencies]
thiserror = { workspace = true }
sha2 = { workspace = true }
lz4_flex = { workspace = true }
flate2 = { workspace = true }
zstd = { workspace = true }

[lints]
workspace = true
