[package]
name = "zfs-forensic-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "From-scratch ZFS on-disk reader — vdev labels, XDR nvlist config, uberblock ring, block-pointer tree, dnodes/ZAP/DSL/ZPL, over any byte source. forbid(unsafe)"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/zfs-forensic-core"
readme.workspace = true
authors.workspace = true
keywords = ["forensics", "zfs", "filesystem", "dfir", "parser"]
categories.workspace = true
# Integration tests read the repo-root tests/data L0 label fixture via
# include_bytes!/env-gated paths, outside this package. Excluding /tests keeps
# the published tarball self-contained; the explicit *.img/*.bin globs are
# belt-and-suspenders so a large minted oracle image can never leak into the
# published `.crate` and breach the ~10 MiB crates.io limit.
exclude = [
    "/fuzz",
    "/.github",
    "/docs",
    "/tests",
    "/tests/data/*.img",
    "/tests/data/*.bin",
]

# The bare `zfs` crate name (ticki/zfs, 2016, abandoned) AND `zfs-core`
# (libzfs_core FFI, 2019) are both taken on crates.io. Per the fleet naming
# grammar's "<x>-core-taken" rule, the reader publishes under the <repo>-core
# form `zfs-forensic-core` (mirroring browser-forensic-core), keeping the import
# path `zfs_core` via [lib] name so consumers are unaffected.
[lib]
name = "zfs_core"

[dependencies]
thiserror = { workspace = true }
sha2 = { workspace = true }
lz4_flex = { workspace = true }
flate2 = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
# The P3 file-content integration test hashes recovered bytes to reconcile
# against the minted sha256 ground truth (Doer-Checker); sha2 is already a
# runtime dep, declared here too so the separate integration-test crate links it.
sha2 = { workspace = true }

[lints]
workspace = true
